--- a/[02] 기능명세서/기능명세서.md
+++ b/[02] 기능명세서/기능명세서.md
@@ -12,11 +12,11 @@
 
 ## Back-End
 
-| 기능 | 상세기능 | 설명 | 진행여부 |
-| ---- | -------- | ---- | -------- |
-|      |          |      |          |
-|      |          |      |          |
-|      |          |      |          |
+| 기능          | 상세기능                                   | 설명                                                         | 진행여부 |
+| ------------- | ------------------------------------------ | ------------------------------------------------------------ | -------- |
+| 네트워크 구축 | 하이퍼레저 패브릭 네트워크 구축            | VirtualBox에서 네트워크 구축을 실습해본 뒤 AWS에서 배포할 수 있도록 준비한다. | 개발중   |
+| 체인코드 작성 | 하이퍼레저 패브릭에서 사용할 체인코드 작성 | 패브릭 네트워크의 구축이 완료되면 사용할 체인코드를 작성한다. | 개발전   |
+| 백엔드연동    | 패브릭 네트워크와 백엔드 연동              | 패브릭 네트워크의 구축이 완료되면 백엔드와 연동한다.         | 개발전   |
 
 -----
 
