--- a/[8] docs/셀레늄 이미지크롤링.md
+++ b/[8] docs/셀레늄 이미지크롤링.md
@@ -50,7 +50,7 @@ driver.find_element_by_xpath('//*[@id="root"]/div/div[2]/div[1]/div/div[2]/div/d
 ```
 xpath를 이용해서 엘리먼트를 선택하는 방법.  
 이 때 xpath는 [크롬브라우저 - 개발자도구]를 이용해서 쉽게 찾을 수 있다.  
-![image1](/assets/images/post/200526-1.JPG)  
+![image alt <](./image/200526-1.jpg)  
   
  * tag 이용하기  
  ```python
