--- a/[02] 기능명세서/기능명세서.md
+++ b/[02] 기능명세서/기능명세서.md
@@ -1,40 +1,52 @@
-# Bloom_기능명세서
+﻿# Bloom_기능명세서
 
 ## Front-End
 
-| 기능 | 상세기능 | 설명 | 진행여부 |
-| ---- | -------- | ---- | -------- |
-|      |          |      |          |
-|      |          |      |          |
-|      |          |      |          |
+| 기능               | 상세기능                                                     | 설명                                                         | 진행여부 |
+| ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | -------- |
+| 회원가입 페이지    | 추가 정보를 입력하는 페이지                                  | 카카오 톡 로그인시 회원에게 추천시스템을 제공하기 위해 추가 정보(출생년도, 성별, 선호도)를 입력받도록 한다. | 개발완료 |
+| 회원별 추천 시스템 | 메인페이지에 나이별, 성별, 선호도별로 사용자에게 방을 추천하는 페이지 | 사용자가 회원가입할 때 입력한 정보를 바탕으로 나이별, 성별, 선호도별로 3개씩 추천한다. | 개발완료 |
+| 찜하기             | 방의 이력들에 대하여 찜하기 기능 제공                        | 사용자가 찜하고 싶은 방의 이력이 있으면 찜하기를 클릭하여 찜하기 내역에 저장할 수 있으며 유저정보에서 찜한 결과들을 볼 수 있다. | 개발중   |
+| 방 이력 페이지     | 방의 이력을 보여주는 상세페이지를 제공                       | 기존 상세페이지에서 리모델링한 정보를 바탕으로 상세페이지를 구현 및 제공 | 개발전   |
 
 -----
 
 ## Back-End
 
-| 기능          | 상세기능                                   | 설명                                                         | 진행여부 |
-| ------------- | ------------------------------------------ | ------------------------------------------------------------ | -------- |
-| 네트워크 구축 | 하이퍼레저 패브릭 네트워크 구축            | VirtualBox에서 네트워크 구축을 실습해본 뒤 AWS에서 배포할 수 있도록 준비한다. | 개발중   |
-| 체인코드 작성 | 하이퍼레저 패브릭에서 사용할 체인코드 작성 | 패브릭 네트워크의 구축이 완료되면 사용할 체인코드를 작성한다. | 개발전   |
-| 백엔드연동    | 패브릭 네트워크와 백엔드 연동              | 패브릭 네트워크의 구축이 완료되면 백엔드와 연동한다.         | 개발전   |
+| 기능        | 상세기능         | 설명                                                         | 진행여부 |
+| ----------- | ---------------- | ------------------------------------------------------------ | -------- |
+| 로그인      | Kakao API 로그인 | KaKao API를 통한 로그인을 통해 얻은 JWT를 프론트 엔드로 넘겨준다. | 개발중   |
+| 사용자 정보 | 회원정보 추가    | 가입 시 필수적인 회원정보(출생년도, 성별, 선호도)를 작성한다. | 개발중   |
+| 사용자 정보 | 최근 본 방       | 사용자가 최근 본 방의 정보를 사용자에게 제공한다.            | 개발전   |
+| 사용자 정보 | 찜하기 한 방     | 사용자가 찜하기 한 방의 정보를 사용자에게 제공한다.          | 개발전   |
+| 추천        | 나이별 추천      | 회원정보로 등록했던 출생년도로 연령대를 계산하여 추천 방의 정보를 사용자에게 제공한다. | 개발전   |
+| 추천        | 성별 추천        | 회원정보로 등록했던 성별를 기반으로 추천 방의 정보를 사용자에게 제공한다. | 개발전   |
+| 추천        | 선호도 추천      | 회원정보로 등록했던 선호도를 기반으로 추천 방의 정보를 사용자에게 제공한다. | 개발전   |
+| 검색        | 주소 검색        | 주소와 일치하는 방의 정보를 사용자에게 제공한다.             | 개발전   |
+| 검색        | 최근 검색        | 검색했던 주소의 정보를 저장하고 사용자에게 제공한다.         | 개발전   |
 
 -----
 
 ## Blockchain
 
-| 기능 | 상세기능 | 설명 | 진행여부 |
-| ---- | -------- | ---- | -------- |
-|      |          |      |          |
-|      |          |      |          |
-|      |          |      |          |
+| 기능          | 상세기능                                   | 설명                                                         | 진행여부 |
+| ------------- | ------------------------------------------ | ------------------------------------------------------------ | -------- |
+| 네트워크 구축 | 하이퍼레저 패브릭 네트워크 구축            | VirtualBox에서 네트워크 구축을 실습해본 뒤 AWS에서 배포할 수 있도록 준비한다. | 개발중   |
+| 체인코드 작성 | 하이퍼레저 패브릭에서 사용할 체인코드 작성 | 패브릭 네트워크의 구축이 완료되면 사용할 체인코드를 작성한다. | 개발전   |
+| 백엔드 연동   | 패브릭 네트워크와 백엔드 연동              | 패브릭 네트워크의 구축이 완료되면 백엔드와 연동한다.         | 개발전   |
 
 ------
 
 ## BigData
 
-| 기능 | 상세기능 | 설명 | 진행여부 |
-| ---- | -------- | ---- | -------- |
-|      |          |      |          |
-|      |          |      |          |
-|      |          |      |          |
-
+| 기능                | 상세기능                      | 설명                                                         | 진행여부  |
+| ------------------- | ----------------------------- | ------------------------------------------------------------ | --------- |
+| 데이터 전처리       | 데이터 전처리 진행            | 프로젝트에 사용할 데이터를 다운로드 받은 후, 데이터베이스에 맞게 칼럼을 추가 , 변경 삭제한다.<br />데이터 출처 :국토부-실거래가 조회 | 개발 완료 |
+| 데이터 전처리       | 데이터베이스 저장             | 전처리를 마친 데이터를 프로젝트의 데이터베이스에 저장한다.   | 개발완료  |
+| 데이터 전처리       | 카테고리별 데이터 수집        | 추천 시스템에 사용할 각 카테고리에 해당하는 데이터를 API를 통해 수집한다.<br />사용 API : KaKao API | 개발중    |
+| 데이터 전처리       | 이미지 수집                   | 거래 이력 데이터에 포함되는 이미지를 수집한다.<br />이미지 수집에 필요한 Selenium 모듈을 작성한다. | 개발중    |
+| 문서 작성           | README 작성하기               | 산출물에 대한 안내 파일을 작성한다.<br />프로젝트 진행 과정에서 공유하면 좋을 내용들을 docs폴더에 TIL 형태로 문서 작성한다. | 개발중    |
+| 백엔드 연동 및 개발 | Django를 이용한 프로젝트 생성 | Django프로젝트를 생성한다.<br />Python개발환경을 위한 requirements파일을 생성한다.<br />REST API 사용 시 간편한 문서화를 위해 swagger 설정을 추가한다. | 개발완료  |
+| 백엔드 연동 및 개발 | 추천모듈 개발 준비            | 어떤 방식의 추천 모듈을 사용할 지 RMSE를 지표로 분석한 후 적합한 알고리즘을 선정한다. | 개발전    |
+| 백엔드 연동 및 개발 | 추천모듈 개발                 | 사용자의 회원정보(선호지역 내의 카테고리 우선순위)을 기반으로한 추천 시스템을 개발한다. | 개발전    |
+| 백엔드 연동 및 개발 | 추천 모듈 테스트              | 개발한 추천 모듈을 테스트한다.<br />1) 프론트와 연동이 원활한지 확인한다.<br />2) 데이터베이스 호출이 원활한지 확인한다. | 개발전    |
