Fix django part(visualization)

--- a/[05] 소스코드/bigdata/dataframe을mysql에 저장하기(building,around).ipynb
+++ b/[05] 소스코드/bigdata/dataframe을mysql에 저장하기(building,around).ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "# 데이터프레임을 mysql에 업로드\n",
-    "2020-05-25 : building,around \n",
-    "2020-05-27 : building에 호 추가, 이미지 저장\n",
+    "2020-05-25 : building,around  \n",
+    "2020-05-27 : building에 호 추가, 이미지 저장  \n",
+    "2020-05-28 : 백업용 데이터를 위한 저장하는 셀 추가\n",
     "### building 테이블 스키마\n",
     "```\n",
     "CREATE TABLE rot.building (\n",
@@ -70,10 +71,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "db_connection_str = 'mysql+pymysql://test:rot123456789!!@k02b2031.p.ssafy.io:3306/rot'\n",
     "db_connection = create_engine(db_connection_str)\n",
@@ -84,8 +90,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### local\n",
-    "db_connection_str = 'mysql+pymysql://root:ssafy@localhost:3306/rot'\n",
+    "#### local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_connection_str = 'mysql+pymysql://mds:ssafy@localhost:3306/rot'\n",
     "db_connection = create_engine(db_connection_str)\n",
     "conn = db_connection.connect()"
    ]
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +152,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +217,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['exclusive', 'cost', 'floor', 'kind', 'detail', 'monthly',\n",
+       "       'contractedAt', 'sd', 'sgg', 'emd', 'latitude', 'longitude', 'address',\n",
+       "       'license', 'createdAt', 'image'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,11 +262,10 @@
        "license                 object\n",
        "createdAt       datetime64[ns]\n",
        "image                   object\n",
-       "ho                      object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,18 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['9', '1', '8', '10', '2', '7', '15', '11', '13', '3', '6', '5',\n",
-       "       '14', '4', '12', '16', '17', '18', '19', '20', '21', '22', '23',\n",
+       "array(['10', '1', '13', '5', '14', '11', '12', '7', '2', '4', '9', '6',\n",
+       "       '15', '3', '8', '16', '17', '18', '19', '20', '21', '22', '23',\n",
        "       '24', '25', '26', '27', '28'], dtype=object)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +412,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,16 +423,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "아파트       56037\n",
+       "연립/다세대     4784\n",
+       "오피스텔       1851\n",
+       "Name: kind, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df['sd'].str.contains('대전')]['kind'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,16 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4797"
+       "4796"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +584,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +783,7 @@
        "[3020 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,25 +802,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 백업을 위한 저장단계"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df1_final.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.to_csv('./data/백업building.csv',index=False, sep=\",\")\n",
+    "df1_final.to_csv('./data/백업around.csv',index=False, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "exclusive               object\n",
+    "cost                    object\n",
+    "floor                   object\n",
+    "kind                    object\n",
+    "detail                  object\n",
+    "monthly                 object\n",
+    "contractedAt            object\n",
+    "sd                      object\n",
+    "sgg                     object\n",
+    "emd                     object\n",
+    "latitude                object\n",
+    "longitude               object\n",
+    "address                 object\n",
+    "license                 object\n",
+    "createdAt       datetime64[ns]\n",
+    "image                   object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 백업데이터 불러오기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dtypes={'exclusive':str,'cost':str,'floor':str,'ho':str,'kind':str,'detail':str,'monthly':str,'contractedAt':str,'sd':str,'sgg':str,'emd':str,'latitude':str,'longitude':str,'address':str,'license':str,'createdAt':str,'image':str }\n",
+    "dtypes1={'address':str,'trans':str,'comforts':str,'education':str,'medical':str,'eatery':str,'culture':str}\n",
+    "\n",
+    "df = pd.read_csv('./data/백업building.csv', sep=\",\", dtype=dtypes)\n",
+    "df1_final=pd.read_csv('./data/백업around.csv', sep=\",\", dtype=dtypes1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "g = df.pivot_table(index=['emd','detail'],values='sgg',aggfunc='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(162834, 17)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1_final.shape"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.to_sql(name='building', con=db_connection, if_exists='append',index=False)\n",
+    "df1_final.to_sql(name='around', con=db_connection, if_exists='append',index=False)"
+   ]
   }
  ],
  "metadata": {
