Fix visualization, Add cors in django

--- a/[02] 기능명세서/기능명세서.md
+++ b/[02] 기능명세서/기능명세서.md
@@ -50,4 +50,4 @@
 | 백엔드 연동 및 개발 | 추천모듈 개발 준비            | 어떤 방식의 추천 모듈을 사용할 지 RMSE를 지표로 분석한 후 적합한 알고리즘을 선정한다. | 개발전    |
 | 백엔드 연동 및 개발 | 추천모듈 개발                 | 사용자의 회원정보(선호지역 내의 카테고리 우선순위)을 기반으로한 추천 시스템을 개발한다. | 개발전    |
 | 백엔드 연동 및 개발 | 추천 모듈 테스트              | 개발한 추천 모듈을 테스트한다.<br />1) 프론트와 연동이 원활한지 확인한다.<br />2) 데이터베이스 호출이 원활한지 확인한다. | 개발전    |
-| 백엔드 연동 및 개발 | 시각화 자료 추출              | 건물 주소, 해당 건물이 속한 동을 기반으로 평균 거래가격을 시각화 그래프로 보여주기 위한 REST API를 개발한다. | 개발중    |
+| 백엔드 연동 및 개발 | 시각화 자료 추출              | 건물 주소, 해당 건물이 속한 동을 기반으로 평균 거래가격을 시각화 그래프로 보여주기 위한 REST API를 개발한다. | 개발완료    |
