Add fakedata ipynb file, Fix views

--- a/[05] 소스코드/bigdata/dataframe을mysql에 저장하기(contract,around).ipynb
+++ b/[05] 소스코드/bigdata/dataframe을mysql에 저장하기(contract,around).ipynb
@@ -225,7 +225,7 @@
    "source": [
     "df.rename(columns={'전용면적':'exclusive','거래금액':'cost',\"도로명주소\":'address',\n",
     "             '시도':'sd','시군구':'sgg','읍면동':'emd',\n",
-    "             '위도':'latitude','경도':'longitude','층':'floor',\n",
+    "             '위도':'longitude','경도':'latitude','층':'floor',\n",
     "             '거래형태':'detail','건물종류':'kind','계약날짜':'contract_date',\n",
     "             '월세':'monthly'},inplace=True)"
    ]
@@ -774,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
