Fix ipynb file's location & Fix readme

--- a/[02] 기능명세서/기능명세서.md
+++ b/[02] 기능명세서/기능명세서.md
@@ -45,9 +45,9 @@
 | 데이터 전처리       | 데이터베이스 저장             | 전처리를 마친 데이터를 프로젝트의 데이터베이스에 저장한다.   | 개발완료  |
 | 데이터 전처리       | 카테고리별 데이터 수집        | 추천 시스템에 사용할 각 카테고리에 해당하는 데이터를 API를 통해 수집한다.<br />사용 API : KaKao API | 개발완료    |
 | 데이터 전처리       | 이미지 수집                   | 거래 이력 데이터에 포함되는 이미지를 수집한다.<br />이미지 수집에 필요한 Selenium 모듈을 작성한다. | 개발완료    |
-| 문서 작성           | README 작성하기               | 산출물에 대한 안내 파일을 작성한다.<br />프로젝트 진행 과정에서 공유하면 좋을 내용들을 docs폴더에 TIL 형태로 문서 작성한다. | 개발중    |
+| 문서 작성           | README 작성하기               | 산출물에 대한 안내 파일을 작성한다.<br />프로젝트 진행 과정에서 공유하면 좋을 내용들을 docs폴더에 TIL 형태로 문서 작성한다. | 개발완료  |
 | 백엔드 연동 및 개발 | Django를 이용한 프로젝트 생성 | Django프로젝트를 생성한다.<br />Python개발환경을 위한 requirements파일을 생성한다.<br />REST API 사용 시 간편한 문서화를 위해 swagger 설정을 추가한다. | 개발완료  |
-| 백엔드 연동 및 개발 | 추천모듈 개발 준비            | 어떤 방식의 추천 모듈을 사용할 지 RMSE를 지표로 분석한 후 적합한 알고리즘을 선정한다. | 개발중    |
-| 백엔드 연동 및 개발 | 추천모듈 개발                 | 사용자의 회원정보(선호지역 내의 카테고리 우선순위)을 기반으로한 추천 시스템을 개발한다. | 개발중    |
-| 백엔드 연동 및 개발 | 추천 모듈 테스트              | 개발한 추천 모듈을 테스트한다.<br />1) 프론트와 연동이 원활한지 확인한다.<br />2) 데이터베이스 호출이 원활한지 확인한다. | 개발중    |
+| 백엔드 연동 및 개발 | 추천모듈 개발 준비            | 어떤 방식의 추천 모듈을 사용할 지 RMSE를 지표로 분석한 후 적합한 알고리즘을 선정한다. | 개발완료  |
+| 백엔드 연동 및 개발 | 추천모듈 개발                 | 사용자의 회원정보(선호지역 내의 카테고리 우선순위)을 기반으로한 추천 시스템을 개발한다. | 개발완료  |
+| 백엔드 연동 및 개발 | 추천 모듈 테스트              | 개발한 추천 모듈을 테스트한다.<br />1) 프론트와 연동이 원활한지 확인한다.<br />2) 데이터베이스 호출이 원활한지 확인한다. | 개발완료 |
 | 백엔드 연동 및 개발 | 시각화 자료 추출              | 건물 주소, 해당 건물이 속한 동을 기반으로 평균 거래가격을 시각화 그래프로 보여주기 위한 REST API를 개발한다. | 개발완료    |
