Fix views, Add ipynb for update database:

--- a/[04] 데이터파일/가상으로만든user,interest,favorite데이터.ipynb
+++ b/[04] 데이터파일/가상으로만든user,interest,favorite데이터.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "227"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#t = around[around['address'].str.contains('대전광역시 서구')]\n",
     "t = around.copy()\n",
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +211,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>birth</th>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>sd</th>\n",
+       "      <th>sgg</th>\n",
+       "      <th>user_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>마트/편의점</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>음식점/카페</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>고창군</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>마트/편의점</td>\n",
+       "      <td>교육시설</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>군산시</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>마트/편의점</td>\n",
+       "      <td>교육시설</td>\n",
+       "      <td>의료시설</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>함안군</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>의료시설</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>마트/편의점</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>전라남도</td>\n",
+       "      <td>목포시</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1972</td>\n",
+       "      <td>의료시설</td>\n",
+       "      <td>음식점/카페</td>\n",
+       "      <td>마트/편의점</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>영덕군</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   birth   first  second   third gender    sd  sgg  user_num\n",
+       "0   2001  마트/편의점    문화시설  음식점/카페     남자  전라북도  고창군         0\n",
+       "1   1992    문화시설  마트/편의점    교육시설     여자  전라북도  군산시         1\n",
+       "2   1994  마트/편의점    교육시설    의료시설     여자  경상남도  함안군         2\n",
+       "3   1974    의료시설    문화시설  마트/편의점     여자  전라남도  목포시         3\n",
+       "4   1972    의료시설  음식점/카페  마트/편의점     여자  경상북도  영덕군         4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "FI = pd.DataFrame(data=fake_interests,columns=['birth','first','second','third','gender','sd','sgg','user_num'])\n",
     "FI.head()"
@@ -219,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -243,14 +359,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>interest_id</th>\n",
        "      <th>birth</th>\n",
        "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
        "      <th>gender</th>\n",
        "      <th>sd</th>\n",
-       "      <th>second</th>\n",
        "      <th>sgg</th>\n",
-       "      <th>third</th>\n",
        "      <th>user_num</th>\n",
        "      <th>hap</th>\n",
        "    </tr>\n",
@@ -258,45 +373,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1993</td>\n",
+       "      <td>2001</td>\n",
        "      <td>마트/편의점</td>\n",
-       "      <td>남자</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>교육시설</td>\n",
-       "      <td>서초구</td>\n",
        "      <td>문화시설</td>\n",
-       "      <td>1325655754</td>\n",
-       "      <td>서울특별시 서초구</td>\n",
+       "      <td>음식점/카페</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>고창군</td>\n",
+       "      <td>0</td>\n",
+       "      <td>전라북도 고창군</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>교통</td>\n",
-       "      <td>남자</td>\n",
-       "      <td>대전광역시</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>문화시설</td>\n",
        "      <td>마트/편의점</td>\n",
-       "      <td>서구</td>\n",
-       "      <td>음식점/카페</td>\n",
-       "      <td>1342316881</td>\n",
-       "      <td>대전광역시 서구</td>\n",
+       "      <td>교육시설</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>군산시</td>\n",
+       "      <td>1</td>\n",
+       "      <td>전라북도 군산시</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   interest_id  birth   first gender     sd  second  sgg   third    user_num  \\\n",
-       "0            3   1993  마트/편의점     남자  서울특별시    교육시설  서초구    문화시설  1325655754   \n",
-       "1            4   1995      교통     남자  대전광역시  마트/편의점   서구  음식점/카페  1342316881   \n",
-       "\n",
-       "         hap  \n",
-       "0  서울특별시 서초구  \n",
-       "1   대전광역시 서구  "
+       "   birth   first  second   third gender    sd  sgg  user_num       hap\n",
+       "0   2001  마트/편의점    문화시설  음식점/카페     남자  전라북도  고창군         0  전라북도 고창군\n",
+       "1   1992    문화시설  마트/편의점    교육시설     여자  전라북도  군산시         1  전라북도 군산시"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,16 +477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(242902, 3)"
+       "(243091, 3)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,21 +497,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3    73840\n",
-       "2    53040\n",
-       "4    52558\n",
-       "1    31832\n",
-       "5    31632\n",
+       "3    74099\n",
+       "4    53187\n",
+       "2    52700\n",
+       "1    31742\n",
+       "5    31363\n",
        "Name: score, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,27 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "38076    48\n",
-       "39053    44\n",
-       "36853    43\n",
-       "38111    41\n",
-       "36806    40\n",
+       "38111    47\n",
+       "37863    47\n",
+       "37945    45\n",
+       "38076    44\n",
+       "38001    43\n",
        "         ..\n",
-       "1356      1\n",
-       "34012     1\n",
-       "3277      1\n",
-       "13844     1\n",
-       "2047      1\n",
-       "Name: around, Length: 37203, dtype: int64"
+       "29030     1\n",
+       "24932     1\n",
+       "4498      1\n",
+       "10645     1\n",
+       "30551     1\n",
+       "Name: around, Length: 37290, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,16 +573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(220645, 3)"
+       "(221170, 3)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +625,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9138</td>\n",
+       "      <td>38270</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -526,10 +635,10 @@
       ],
       "text/plain": [
        "   around  user  score\n",
-       "0    9138     0      3"
+       "0   38270     0      3"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,140 +692,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "FF.to_sql(name='favorite', con=db_connection, if_exists='append',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>around_around_id</th>\n",
-       "      <th>user_num</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9138</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9788</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8058</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13291</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10331</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242883</th>\n",
-       "      <td>38345</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242884</th>\n",
-       "      <td>38317</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242885</th>\n",
-       "      <td>38719</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242886</th>\n",
-       "      <td>38716</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242888</th>\n",
-       "      <td>38718</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>220645 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        around_around_id  user_num  score\n",
-       "0                   9138         0      3\n",
-       "1                   9788         0      3\n",
-       "2                   8058         0      4\n",
-       "3                  13291         0      4\n",
-       "4                  10331         0      4\n",
-       "...                  ...       ...    ...\n",
-       "242883             38345      1998      2\n",
-       "242884             38317      1998      3\n",
-       "242885             38719      1999      3\n",
-       "242886             38716      1999      4\n",
-       "242888             38718      1999      4\n",
-       "\n",
-       "[220645 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FF"
    ]
   },
   {
